# GitHub-autoswitch

./: .gitignore  PRD.md  README.md  SECURITY.md  pyproject.toml
completions/: ghx.bash  ghx.fish  ghx.zsh
src/ghx/: __init__.py  cli.py  config.py  gh.py  inference.py  picker.py  status.py
tests/: conftest.py  test_config.py  test_gh.py  test_inference.py
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: chatParticipant.ts  extension.ts  ghxBridge.ts  statusBar.ts
